// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipContent have correct structure with just title 1`] = `
<div>
  <div
    class="tooltipContent"
  >
    <span
      class="tooltipContentTitleContainer"
    >
      <span
        class="tooltipContentTitle"
      >
        Title
      </span>
    </span>
  </div>
</div>
`;

exports[`TooltipContent have correct structure with title and emoji 1`] = `
<div>
  <div
    class="tooltipContent"
  >
    <span
      class="tooltipContentTitleContainer"
    >
      <span
        class="tooltipContentEmoji"
      >
        <span
          aria-label=":smile:"
          class="emoticon"
          data-emoticon="smile"
          style="background-image: url(/static/emoji/1f604.png); background-size: contain; height: 28px; width: 28px; max-height: 28px; max-width: 28px; min-height: 28px; min-width: 28px; overflow: hidden;"
        />
      </span>
      <span
        class="tooltipContentTitle"
      >
        Title with Emoji
      </span>
    </span>
  </div>
</div>
`;

exports[`TooltipContent have correct structure with title and large emoji 1`] = `
<div>
  <div
    class="tooltipContent"
  >
    <span
      class="tooltipContentTitleContainer isEmojiLarge"
    >
      <span
        class="tooltipContentEmoji"
      >
        <span
          aria-label=":smile:"
          class="emoticon"
          data-emoticon="smile"
          style="background-image: url(/static/emoji/1f604.png); background-size: contain; height: 48px; width: 48px; max-height: 48px; max-width: 48px; min-height: 48px; min-width: 48px; overflow: hidden;"
        />
      </span>
      <span
        class="tooltipContentTitle"
      >
        Title with Large Emoji
      </span>
    </span>
  </div>
</div>
`;

exports[`TooltipContent have correct structure with title and shortcut 1`] = `
<div>
  <div
    class="tooltipContent"
  >
    <span
      class="tooltipContentTitleContainer"
    >
      <span
        class="tooltipContentTitle"
      >
        Title with Shortcut
      </span>
    </span>
    <span
      class="tooltipContentShortcut"
    >
      <mark
        class="shortcut-key shortcut-key--tooltip"
      >
        Ctrl
      </mark>
      <mark
        class="shortcut-key shortcut-key--tooltip"
      >
        K
      </mark>
    </span>
  </div>
</div>
`;

exports[`TooltipContent have correct structure with title, emoji and hint 1`] = `
<div>
  <div
    class="tooltipContent"
  >
    <span
      class="tooltipContentTitleContainer"
    >
      <span
        class="tooltipContentEmoji"
      >
        <span
          aria-label=":smile:"
          class="emoticon"
          data-emoticon="smile"
          style="background-image: url(/static/emoji/1f604.png); background-size: contain; height: 28px; width: 28px; max-height: 28px; max-width: 28px; min-height: 28px; min-width: 28px; overflow: hidden;"
        />
      </span>
      <span
        class="tooltipContentTitle"
      >
        Title with Hint
      </span>
    </span>
    <span
      class="tooltipContentHint"
    >
      This is a hint
    </span>
  </div>
</div>
`;
